NodeJS: error logger and errors endpoint
